# filewatcher123d

./: README.md  demo_watcher.py  otherparameters.py  pyproject.toml
src/filewatcher123d/: cli.py  monitor.py
